--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">PocketWeather</string>
+    <string name="city_name">Enter the name of the city</string>
+    <string name="user_data">UserData</string>
+    <string name="enter">enter</string>
+    <string name="pressure">Pressure</string>
+    <string name="wet">Wet</string>
+    <string name="wind">Wind</string>
+    <string name="temperature">Temperature</string>
 </resources>
