rested one activity for different fragments

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -30,4 +30,6 @@
         <item>Севастополь</item>
         <item>С.-Петербург</item>
     </string-array>
+
+    <string name="serviceError">Невозможно отобразить информацию. Сервис не доступен.</string>
 </resources>
